# OSDP-Embedded

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE-GPL-3.0.txt  LICENSE.md  LICENSING  README.md
acu/: CMakeLists.txt
acu/include/osdp/: osdp_acu.h
acu/src/: acu.c  acu_internal.h  acu_sc.c  acu_sc2.c
ci/: azure-pipelines.yml  build-c.yml  build-rust.yml  build.yml  cross-pi.yml  package-linux.yml  package.yml
cmake/toolchains/: aarch64-linux-gnu.cmake
core/: CMakeLists.txt
core/include/osdp/: osdp_buz_state.h  osdp_cbor.h  osdp_checksum.h  osdp_commands.h  osdp_crc.h  osdp_dispatch.h  osdp_frame.h  osdp_led_state.h  osdp_pair.h  osdp_pair_crypto.h  osdp_replies.h  osdp_sc.h  osdp_sc2.h  osdp_sc2_crypto.h  osdp_sc_crypto.h  osdp_stream.h  osdp_types.h
core/src/commands/: cmd_buz.c  cmd_cap.c  cmd_comset.c  cmd_filetransfer.c  cmd_id.c  cmd_keyset.c  cmd_led.c  cmd_out.c  cmd_poll.c  cmd_text.c
core/src/dispatch/: dispatch_classify.c
core/src/pair/: cbor.c  cert.c  fragment.c  keyschedule.c  messages.c  multipart.c  session.c
core/src/replies/: reply_ack.c  reply_com.c  reply_ftstat.c  reply_istatr.c  reply_keypad.c  reply_lstatr.c  reply_nak.c  reply_ostatr.c  reply_pdcap.c  reply_pdid.c  reply_raw.c  reply_rstatr.c
core/src/sc/: cbc.c  keys.c  mac.c  payload.c  session.c  wrap.c
core/src/sc2/: crypto.c  keys.c  session.c  wrap.c
core/src/shared/: buz_state.c  checksum.c  crc16.c  frame.c  led_state.c  pack.h  stream.c
docs/: MULTI_PD_PLAN.md  PD_GUIDE.md  PLAN.md  PUBLISHING.md  osdp-mcp-https-pi.md  pairing-design.md
pd/: CMakeLists.txt
pd/include/osdp/: osdp_pd.h  osdp_pd_pair.h
pd/src/: pd.c  pd_internal.h  pd_pair.c  pd_sc.c  pd_sc2.c
rust/: Cargo.toml
rust/.config/: nextest.toml
rust/osdp/: Cargo.toml  build.rs
rust/osdp-sys/: Cargo.toml  build.rs
rust/osdp-sys/src/: lib.rs
rust/osdp-sys/tests/: smoke.rs
rust/osdp/examples/: loopback.rs  loopback_sc.rs  loopback_sc2.rs
rust/osdp/src/: acu.rs  error.rs  frame.rs  lib.rs  messages.rs  pd.rs  sc.rs  sys.rs  transport.rs
rust/osdp/tests/: bad_check_nak.rs  comset_config.rs  file_transfer.rs  keyset_rotation.rs  led_tracking.rs  sc_clear_text_policy.rs  smoke.rs
scripts/: Check-Code.ps1  Get-Version.ps1  New-Release.ps1  Publish-Crate.ps1  Set-Version.ps1  Stage-Crate.ps1  provision-linux-agent.sh
scripts/hooks/: pre-push
tests/: CMakeLists.txt  pair_test_crypto.c  pair_test_crypto.h  sc2_test_crypto.c  sc2_test_crypto.h  sc_test_aes.c  sc_test_aes.h  test_acu.c  test_acu_sc.c  test_capture_replay.c  test_captures.c  test_checksum.c  test_commands.c  test_crc.c  test_dispatch.c  test_frame.c  test_led_state.c  test_loopback.c  test_loopback_sc.c  test_loopback_sc2.c  test_osdpcap.c  test_pair_cbor.c  test_pair_cert.c  test_pair_crypto.c  test_pair_messages.c  test_pair_session.c  test_pair_transport.c  test_pd.c  test_pd_pair.c  test_pd_sc.c  test_pd_sc2.c  test_replies.c  test_sc2_primitives.c  test_sc2_wrap.c  test_sc_aes.c  test_sc_cbc.c  test_sc_keys.c  test_sc_mac.c  test_sc_payload.c  test_sc_wrap.c  (+1 more)
tests/captures/: README.md  acuconsole-out-empty-reply-failure.osdpcap  acuconsole-poll-id-cap.osdpcap  acuconsole-sc-no-key.osdpcap  sc-monitor-current.osdpcap
tools/: CMakeLists.txt
tools/osdp-acu-mock/: CMakeLists.txt  aes_adapter.c  aes_adapter.h  main.c  sc2_adapter.c  sc2_adapter.h  serial.h  serial_posix.c  serial_win.c
tools/osdp-mcp/: Cargo.toml  build.rs
tools/osdp-mcp/examples/: reader_demo.rs
tools/osdp-mcp/src/: crypto.rs  events.rs  handler.rs  lib.rs  log.rs  main.rs  overrides.rs  pd_actor.rs  pdcap_spec.rs  reader_state.rs  serial_transport.rs  ui.rs  ui_index.html  wire.rs
tools/osdp-mcp/src/crypto/: rustcrypto.rs  tiny_aes.rs
tools/osdp-mcp/tests/: actor_loopback.rs  sc_loopback.rs  smoke_stdio.rs  ui_server.rs  wait_for_command.rs
tools/osdp-parser/: CMakeLists.txt  main.c  osdpcap.c  osdpcap.h
tools/osdp-pd-mock/: CMakeLists.txt  aes_adapter.c  aes_adapter.h  main.c  sc2_adapter.c  sc2_adapter.h  serial.h  serial_posix.c  serial_win.c
