# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2026 Z-bit Systems, LLC

# OSDP-Embedded — Rust workspace.
#
# Two-crate split, matching the common -sys/safe-wrapper convention used
# by zlib-sys/flate2, openssl-sys/openssl, etc:
#
#   - `osdp-sys`: raw FFI bindings to the C core. no_std. No policy, no
#     ergonomics — anything spelled the way the C header spells it.
#   - `osdp`: safe Rust wrapper. Provides idiomatic types around the
#     state machines and codecs. Delegates every operation to
#     `osdp-sys`; never reimplements protocol logic in Rust.
#
# Both crates are no_std-by-default. Optional `alloc` and `std` features
# in the safe wrapper enable closure-based callbacks and standard error
# trait integration; the bare API works on bare-metal targets without
# any allocator.
[workspace]
resolver = "2"
members  = [
    "osdp-sys",
    "osdp",
]

[workspace.package]
# Pre-release. Cargo treats `0.1.0-alpha.1` as strictly less than
# `0.1.0`, so consumers must opt in by writing `version = "=0.1.0-alpha.1"`
# (or matching pre-release range). The `alpha.N` segment increments
# every time we make a breaking change before the first stable
# `0.1.0`; once the public API is stable we drop the suffix.
version       = "0.1.0-alpha.1"
edition       = "2021"
license       = "GPL-3.0-or-later"
authors       = ["Z-bit Systems, LLC"]
repository    = "https://github.com/Z-bit-Systems-LLC/OSDP-Embedded"
rust-version  = "1.70"
