# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2026 Z-bit Systems, LLC

# OSDP-Embedded - Rust workspace.
#
# A single crate (`osdp-embedded`) wraps the C library directly. The
# FFI seam is in-crate (`mod sys`); cargo features `pd` and `acu` gate
# both the Rust modules and the corresponding .c file compilation, so
# a PD-only firmware build (`--no-default-features --features pd`)
# never compiles ACU code.
#
# Earlier iterations had a separate `osdp-sys` crate following the
# common -sys/safe-wrapper convention; we collapsed it for simpler
# publishing. See git history if revisiting that decision.
[workspace]
resolver = "2"
members  = [
    "osdp",
]

[workspace.package]
# Pre-release. Cargo treats `0.1.0-alpha.1` as strictly less than
# `0.1.0`, so consumers must opt in by writing `version = "=0.1.0-alpha.1"`
# (or matching pre-release range). The `alpha.N` segment increments
# every time we make a breaking change before the first stable
# `0.1.0`; once the public API is stable we drop the suffix.
version       = "0.1.0-alpha.1"
edition       = "2021"
license       = "GPL-3.0-or-later"
authors       = ["Z-bit Systems, LLC"]
repository    = "https://github.com/Z-bit-Systems-LLC/OSDP-Embedded"
rust-version  = "1.70"
