# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2026 Z-bit Systems, LLC

# OSDP-Embedded - Rust workspace.
#
# A single crate (`osdp-embedded`) wraps the C library directly. The
# FFI seam is in-crate (`mod sys`); cargo features `pd` and `acu` gate
# both the Rust modules and the corresponding .c file compilation, so
# a PD-only firmware build (`--no-default-features --features pd`)
# never compiles ACU code.
#
# Earlier iterations had a separate `osdp-sys` crate following the
# common -sys/safe-wrapper convention; we collapsed it for simpler
# publishing. See git history if revisiting that decision.
[workspace]
resolver = "2"
members  = [
    "osdp",
    # The MCP server lives under tools/ alongside the C-based host
    # tools (osdp-pd-mock, osdp-acu-mock, osdp-parser); listing it
    # here lets cargo build/test it as part of the workspace.
    "../tools/osdp-mcp",
]

[workspace.package]
# Single source of truth for the published crate's version. Bump via
# scripts/Set-Version.ps1, which keeps CMakeLists.txt's project()
# VERSION in sync with this value. Pre-1.0 SemVer applies: 0.1.x for
# bug-fix releases on the same line, 0.2.0 for breaking changes
# pre-1.0, then 1.0.0 once the public API is stable.
version       = "0.1.19"
edition       = "2021"
license       = "GPL-3.0-or-later"
authors       = ["Z-bit Systems, LLC"]
repository    = "https://github.com/Z-bit-Systems-LLC/OSDP-Embedded"
rust-version  = "1.70"
