# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2026 Z-bit Systems, LLC

[package]
name        = "osdp"
description = "Safe Rust wrapper around the OSDP-Embedded C library"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
rust-version.workspace = true

# The safe wrapper requires `alloc` for trait-object based callbacks
# (Box<dyn Transport> etc); it remains no_std-compatible. The default
# `std` feature only adds `std::error::Error` impls and `Send` markers
# where they're sound.
[features]
default = ["std"]
std     = []

[dependencies]
# Path + version: cargo uses `path` while building inside the workspace
# but uses `version` when published to a registry. The two must match
# the value of `workspace.package.version` in the workspace Cargo.toml
# above. Bump both together.
osdp-sys = { path = "../osdp-sys", version = "=0.1.0-alpha.1" }

# Examples and integration tests use a real AES backend so the loopback
# Secure-Channel example exercises the full handshake. The `aes` crate
# (RustCrypto, MIT/Apache-2.0) is a well-trusted constant-time AES
# implementation and only pulled in for examples + tests, never the
# library proper.
[dev-dependencies]
aes = "0.8"

[lib]
name = "osdp"
path = "src/lib.rs"
