# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2026 Z-bit Systems, LLC

[package]
# Crate name on crates.io. The bare name `osdp` is taken by libosdp's
# Rust binding (https://crates.io/crates/osdp); we use the project
# name to disambiguate. The lib name auto-derives to `osdp_embedded`,
# so users write `use osdp_embedded::pd::Pd`.
name        = "osdp-embedded"
description = "OSDP v2.2.2 implementation in C with a safe Rust wrapper. PD and ACU state machines (incl. Secure Channel) over a freestanding C core."
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
rust-version.workspace = true
keywords    = ["osdp", "embedded", "no-std", "access-control", "rs485"]
categories  = ["embedded", "network-programming", "no-std", "parser-implementations"]

# `links` claims the native library symbol set so cargo prevents two
# different crates from linking the same C symbols into one binary.
# Without an osdp-sys companion crate, this lives directly on the
# main crate.
links       = "osdp_embedded"
build       = "build.rs"

# Whitelist of files packaged into the published .crate. The C source
# tree gets mirrored into vendor-c/ by scripts/Stage-Crate.ps1 right
# before `cargo publish`; build.rs detects the staged layout at compile
# time and falls back to the canonical <repo>/{core,pd,acu}/ paths for
# in-workspace dev builds.
include = [
    "src/**/*",
    "tests/**/*.rs",
    "examples/**/*.rs",
    "build.rs",
    "Cargo.toml",
    "vendor-c/**/*.c",
    "vendor-c/**/*.h",
]

# ---- Features --------------------------------------------------------
#
# Shape the consumer's binary footprint. A PD-only firmware build sets
# `--no-default-features --features pd` and only the PD state machine
# (Rust types + matching .c files) is compiled in. Same for ACU-only.
# The default brings everything along, matching the pattern most users
# (especially Monitor / loopback / integration apps) want.
[features]
default = ["std", "pd", "acu"]

# Enables `std::error::Error` impls and other std-dependent hooks. The
# library itself is no_std-by-construction; this feature controls only
# integration with std types.
std = []

# Compile + expose the PD-side state machine (`osdp_embedded::pd::Pd`,
# CommandHandler trait, Reply struct). Adds pd/src/*.c to the build.
pd  = []

# Compile + expose the ACU-side state machine
# (`osdp_embedded::acu::Acu`, ReplyHandler / TimeoutHandler traits).
# Adds acu/src/*.c to the build.
acu = []

[dependencies]

# Examples and integration tests use a real AES backend so the loopback
# Secure-Channel example exercises the full handshake. The `aes` crate
# (RustCrypto, MIT/Apache-2.0) is a well-trusted constant-time AES
# implementation and only pulled in for examples + tests, never the
# library proper.
[dev-dependencies]
aes = "0.8"

[build-dependencies]
cc = "1.0"

[lib]
# `name` omitted so it auto-derives to `osdp_embedded` from the
# package name (cargo turns hyphens to underscores).
path = "src/lib.rs"

# Both loopback examples wire a Pd to an Acu in process; they only
# build when both role-features are active. cargo automatically skips
# them in `cargo build --no-default-features --features pd`.
[[example]]
name              = "loopback"
required-features = ["pd", "acu"]

[[example]]
name              = "loopback_sc"
required-features = ["pd", "acu"]
